@@ -17,12 +17,12 @@
 
 
 /**
- * copy_file - copy a file or subtree
+ * copy_file - copy a file.
  * @param source        filename to copy from
  * @param destination   filename to copy into
  *
- * the last modification time of the source file is preserved, return true if
- * copying successful
+ * the last modification time of the source file is preserved, file attribute
+ * and owner are preserved if possible. Return true if copying successful.
  */
 bool copy_file(std::string const & source, std::string const & destination);
 
