@@ -1,3 +1,11 @@
+2005-08-10  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/file_manip.h:
+	* libutil++/file_manip.cpp: preserve as many of file attributes and
+	  owner we can when copying a file. This affected running oparchive
+	  with root right allowing non root user to read all archived binaries.
+	  Problem started in cvs the 2005-08-07
+
 2005-08-09  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* daemon/opd_anon.c:
